# vigil

./: .bazelignore  .bazelrc  .clangd  BUILD  MODULE.bazel  health_handler_test.cc  main.cc  test.sh
.github/workflows/: test-coverage.yml
iris/: BUILD  dashboard.html  index.html
iris/accounts/: new.html
vigil/: BUILD  get_account_handler.cc  get_account_handler_test.cc  handler_registry.h  insert_account_handler.cc  insert_account_handler_test.cc  main.cc  trade_service.cc  trade_service.h  trade_service_test.cc
vigil/db/: BUILD  account.h  accounts_dao.cc  accounts_dao.h  accounts_dao_test.cc  database.cc  database.h  database_test.cc  holding.h  holdings_dao.cc  holdings_dao.h  holdings_dao_test.cc  schema.sql  sqlite_traits.h  time.h  trade.h  trades_dao.cc  trades_dao.h  trades_dao_test.cc  transaction.h  transactions_dao.cc  transactions_dao.h  transactions_dao_test.cc
vigil/handlers/: BUILD  create_account_handler.cc  create_account_handler.h  create_account_handler_test.cc  create_trade_handler.cc  create_trade_handler_test.cc  create_transaction_handler.cc  create_transaction_handler.h  create_transaction_handler_test.cc  delete_account_handler.cc  delete_account_handler.h  delete_account_handler_test.cc  get_account_handler.cc  get_account_handler.h  get_account_handler_test.cc  get_holding_handler.cc  get_holding_handler_test.cc  get_new_account_handler.cc  get_new_account_handler_test.cc  handler_registry.h  health_handler.cc  health_handler.h  health_handler_test.cc  index_handler.cc  index_handler.h  insert_account_handler.cc  list_trades_handler.cc  (+9 more)
(+60 files in other folders)
