module(
    name = "vigil",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "pulse", version = "1.0.0")
git_override(
    module_name = "pulse",
    commit = "20400d0bc8751fc11cdbf1cc60b6dda54ff446a8",
    remote = "https://github.com/warrenjkim/pulse.git",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "sqlite3", version = "3.51.2")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "googletest", version = "1.17.0")
